syntax = "proto3";

package org.project_planton.provider.kubernetes.workload.kubernetescronjob.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/workload/kubernetescronjob/v1/spec.proto";
import "org/project_planton/provider/kubernetes/workload/kubernetescronjob/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//cron-job-kubernetes
message KubernetesCronJob {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesCronJob'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  KubernetesCronJobSpec spec = 4 [(buf.validate.field).required = true];

  //status
  KubernetesCronJobStatus status = 5;
}

//cron-job-kubernetes-status
message KubernetesCronJobStatus {
  //stack-outputs
  KubernetesCronJobStackOutputs outputs = 1;
}
